--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,8 @@ html,body{
 }
 body{
   background-color: var(--bg);
+    width:100%;
+    height:auto;
 }
 h1,h2,h3,h4,h5,h6{
   font-weight:var(--heavy);
