--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,13 +246,14 @@ a{
   
 }
 .detailed{
-  width:100%;
+  width:auto;
   height:auto;
   display: flex;
   flex-direction:column;
   align-items:center;
   justify-content: space-between;
   transition: all 1s ease-in;
+  padding : 10px;
 }
 .detailed div{
   /* width: 300px; */
